--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/lasagna.html">Lasagna</a>
+        <ul>
+            <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+            <li><a href="./recipes/banana-burger.html">The Elvis Peanut Butter Banana Burger</a></li>
+            <li><a href="./recipes/huli-huli-chicken.html">Huli Huli Chicken</a></li>
+        </ul>
     </body>
 </html>
