CSS styles.css added

--- a/recipes/banana-burger.html
+++ b/recipes/banana-burger.html
@@ -3,15 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <title>The Elvis Peanut Butter Banana Burger</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
 
     <body>
         <h1>The Elvis Peanut Butter Banana Burger</h1>
         <img src="../images/banana-burger.jpg" alt="banana-burger">
         <h2>Description</h2>
-        <p>You've never had a burger quite like this before. Legend has it Elvis loved his peanut butter, bacon, and banana sandwiches, so we created this salty, sweet burger as a tribute to the king of rock 'n' roll. Piled high with creamy peanut butter, extra-crispy bacon, caramelized bananas, and a sweet honey drizzle, this totally unique combination of flavors will have you all shook up. Whether you grill the patties or cook them smash burger-style on the stovetop, these burgers will be a hunk of burning love at your cookout.        </p>
+        <p id="description">You've never had a burger quite like this before. Legend has it Elvis loved his peanut butter, bacon, and banana sandwiches, so we created this salty, sweet burger as a tribute to the king of rock 'n' roll. Piled high with creamy peanut butter, extra-crispy bacon, caramelized bananas, and a sweet honey drizzle, this totally unique combination of flavors will have you all shook up. Whether you grill the patties or cook them smash burger-style on the stovetop, these burgers will be a hunk of burning love at your cookout.        </p>
         <h2>Ingredients</h2>
-        <ul>
+        <ul class="ingredients">
             <li>6 hamburger buns, split</li>
             <li>3 tablespoons butter</li>
             <li>½ pound bacon</li>
