--- a/recipes/huli-huli-chicken.html
+++ b/recipes/huli-huli-chicken.html
@@ -3,15 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <title>Huli Huli Chicken</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
 
     <body>
         <h1>Huli Huli Chicken</h1>
         <img src="../images/huli-huli-chicken.jpg" alt="huli-huli-chicken">
         <h2>Description</h2>
-        <p>'Huli Huli Chicken' (turn, turn) was invented by Ernest Morgado when he cooked teriyaki chicken for a group of farmers in 1955. This has been a Hawaiian staple with sticky rice ever since. This is my family's version of Huli Huli Chicken. Use aji mirin (sweet rice wine) in place of sherry if desired.       </p>
+        <p id="description">'Huli Huli Chicken' (turn, turn) was invented by Ernest Morgado when he cooked teriyaki chicken for a group of farmers in 1955. This has been a Hawaiian staple with sticky rice ever since. This is my family's version of Huli Huli Chicken. Use aji mirin (sweet rice wine) in place of sherry if desired.       </p>
         <h2>Ingredients</h2>
-        <ul>
+        <ul class="ingredients">
             <li>2 (3 pound) chickens, each cut into 8 pieces</li>
             <li>1 cup unsweetened pineapple juice</li>
             <li>½ cup soy sauce</li>
