--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
         <h1>Odin Recipes</h1>
-        <ul>
+        <ul class='recipe'>
             <li><a href="./recipes/lasagna.html">Lasagna</a></li>
             <li><a href="./recipes/banana-burger.html">The Elvis Peanut Butter Banana Burger</a></li>
             <li><a href="./recipes/huli-huli-chicken.html">Huli Huli Chicken</a></li>
