--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,15 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <title>Lasagna</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
 
     <body>
         <h1>Lasagna</h1>
-        <img src="../images/lasagna.jpg" alt="lasagna">
+        <img  class='top' src="../images/lasagna.jpg" alt="lasagna">
         <h2>Description</h2>
-        <p>Traditional, full-flavored lasagna is layered together in just minutes with pasta sauce, noodles, and three cheeses.</p>
+        <p id="description">Traditional, full-flavored lasagna is layered together in just minutes with pasta sauce, noodles, and three cheeses.</p>
         <h2>Ingredients</h2>
-        <ul>
+        <ul class="ingredients">
             <li>6 each uncooked lasagna noodles</li>
             <li>1 (15 ounce) container ricotta cheese</li>
             <li>2 cups shredded mozzarella cheese</li>
